Fix layout shift

--- a/assets/new.scss
+++ b/assets/new.scss
@@ -549,8 +549,10 @@ open-stories {
     align-items: center;
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
     transition: all .3s;
     text-transform: lowercase;
+    line-height: normal;
     justify-content: center;
     cursor: pointer;
 
